Closed
Bug 194644
Opened 23 years ago
Closed 23 years ago
ISO10646-1 fonts not recognised + Talkback crashes in Xprint module [@ nsRenderingContextXlib::GetTextDimensions]
Categories
(Core Graveyard :: Printing: Xprint, defect, P1)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.3final
People
(Reporter: smontagu, Assigned: roland.mainz)
References
Details
(Keywords: crash, regression, topcrash, Whiteboard: fixed1.3)
Crash Data
Attachments
(3 files)
|
1.62 KB,
text/plain
|
Details | |
|
13.30 KB,
text/plain
|
Details | |
|
2.17 KB,
patch
|
smontagu
:
review+
roc
:
superreview+
asa
:
approval1.3+
|
Details | Diff | Splinter Review |
Some recent talkback reports with crashes in Xprint
| Reporter | ||
Comment 1•23 years ago
|
||
The TB IDs are:
17296826
17285461
17285457
17285455
17218471
17204322
17204321
| Assignee | ||
Comment 2•23 years ago
|
||
Swapping QA<---->Owner...
Assignee: katakai → Roland.Mainz
OS: Windows 2000 → Linux
QA Contact: Roland.Mainz → katakai
| Assignee | ||
Comment 3•23 years ago
|
||
Looks something in nsRenderingContextXlib::GetTextDimensions() is going wrong...
two problems:
- The crash seems to be related to the existance of certain fonts. For example I
cannot reproduce the crash while printing http://www.aljazeera.net when I do not
have any arabic fonts installed.
- The "fast test measurement" code path is only enabled on i386 platforms,
marking it hard for me to hunt this issue... ;-(
Status: NEW → ASSIGNED
Summary: Talkback crashes in Xprint module → Talkback crashes in Xprint module [nsRenderingContextXlib::GetTextDimensions()]
| Assignee | ||
Comment 4•23 years ago
|
||
I filed bug 194651 ("Need workaround for crashers in
nsRenderingContextXlib::GetTextDimensions()") to get a quick workaround for
1.3final and use this bug to hunt the root of the problem...
Keywords: crash
Target Milestone: --- → mozilla1.4beta
| Assignee | ||
Comment 5•23 years ago
|
||
Per
http://groups.google.com/groups?q=GetTextDimensions&hl=en&lr=&ie=UTF-8&safe=off&scoring=d&selm=200302200940.BAA03481%40beckett.mcom.com&rnum=1
|GetTextDimensions| seems to be causing some trouble on other platforms, too...
;-/
| Assignee | ||
Comment 6•23 years ago
|
||
rbs/smontagu:
Is it (theoretically) possible that someone may (accidently) pass |nsnull| for
the |GetTextDimensions|'s |aString| argument ?
| Reporter | ||
Comment 7•23 years ago
|
||
The problem in nsRenderingContextXlib::GetTextDimensions when printing Arabic is
conceivably related to bug 188759, which I hope to check in the fix for today.
| Reporter | ||
Comment 8•23 years ago
|
||
The stacks in the talkback reports are all much the same. Here is one example.
| Assignee | ||
Comment 9•23 years ago
|
||
Looks that |mCCMap| is |nsnull|:
-- snip --
WARNING: SetUpFontCharSetInfo: charset = 'jis_0201', file nsFontMetricsXlib.cpp,
line 2581
Program received signal SIGSEGV, Segmentation fault.
0x42a604b9 in nsRenderingContextXlib::GetTextDimensions (this=0x8a09d40,
aString=0xbfff5ac4, aLength=7, aDimensions=@0xbfff5820,
aFontID=0x0) at nsRenderingContextXlib.cpp:2027
2027 if (CCMAP_HAS_CHAR((*font)->mCCMap, c)) {
(gdb) print font
$1 = (nsFontXlib **) 0x8a68cd4
(gdb) print *font
$2 = (nsFontXlib *) 0x8a6b5b0
(gdb) print (*font)->mCCMap
$3 = (PRUint16 *) 0x0
-- snip --
| Assignee | ||
Comment 10•23 years ago
|
||
The issue was more simple than I thought... :)
Actually the issue is identical to the bug that all iso106464-1 fonts cause
crashes or are inaccessible by the Xlib port.
After some reaching I figured-out that the original patch from bug 187125
("GTK+ and Xlib gfx should support multiple device instances") forgot to handle
the special case of the ISO-10646-1 fonts - this patch now fixes that.
| Assignee | ||
Updated•23 years ago
|
Target Milestone: mozilla1.4beta → mozilla1.3beta
| Assignee | ||
Comment 11•23 years ago
|
||
Comment on attachment 115444 [details] [diff] [review]
Patch for 2003-02-07-08-trunk
Requesting r=/sr= ...
Attachment #115444 -
Flags: superreview?(roc+moz)
Attachment #115444 -
Flags: review?(smontagu)
| Assignee | ||
Updated•23 years ago
|
Summary: Talkback crashes in Xprint module [nsRenderingContextXlib::GetTextDimensions()] → ISO10646-1 fonts not recognised + Talkback crashes in Xprint module [nsRenderingContextXlib::GetTextDimensions()]
| Assignee | ||
Updated•23 years ago
|
Severity: normal → blocker
Flags: blocking1.3?
Keywords: mozilla1.3,
regression
Priority: -- → P1
Whiteboard: [patch in hand, waiting for r=/sr=/a=]
Target Milestone: mozilla1.3beta → mozilla1.3final
| Reporter | ||
Comment 12•23 years ago
|
||
Comment on attachment 115444 [details] [diff] [review]
Patch for 2003-02-07-08-trunk
r=smontagu
Attachment #115444 -
Flags: review?(smontagu) → review+
Attachment #115444 -
Flags: superreview?(roc+moz) → superreview+
| Assignee | ||
Comment 13•23 years ago
|
||
Comment on attachment 115444 [details] [diff] [review]
Patch for 2003-02-07-08-trunk
Requesting a= for 1.3final branch...
Attachment #115444 -
Flags: approval1.3?
| Assignee | ||
Comment 14•23 years ago
|
||
Patch checked-in into "trunk"
(http://bonsai.mozilla.org/cvsquery.cgi?module=MozillaTinderboxAll&branch=HEAD&cvsroot=/cvsroot&date=explicit&mindate=1046142360&maxdate=1046142720&who=timeless%25mozdev.org)...
... waiting for a{1.3final}= ...
Comment 15•23 years ago
|
||
Comment on attachment 115444 [details] [diff] [review]
Patch for 2003-02-07-08-trunk
a=asa (on behalf of drivers) for checkin to the 1.3 branch.
Attachment #115444 -
Flags: approval1.3? → approval1.3+
Updated•23 years ago
|
Flags: blocking1.3? → blocking1.3-
Comment 16•23 years ago
|
||
adding topcrash to keywords (for posterity)
Keywords: topcrash
Summary: ISO10646-1 fonts not recognised + Talkback crashes in Xprint module [nsRenderingContextXlib::GetTextDimensions()] → ISO10646-1 fonts not recognised + Talkback crashes in Xprint module [@ nsRenderingContextXlib::GetTextDimensions]
| Assignee | ||
Comment 17•23 years ago
|
||
Patch checked-in into 1.3-branch
(http://bonsai.mozilla.org/cvsquery.cgi?module=MozillaTinderboxAll&branch=MOZILLA_1_3_BRANCH&cvsroot=/cvsroot&date=explicit&mindate=1046216220&maxdate=1046217780&who=smontagu%25netscape.com),
marking bug as FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Whiteboard: [patch in hand, waiting for r=/sr=/a=] → [patch in hand, waiting for r=/sr=/a=] fixed1.3
| Assignee | ||
Updated•23 years ago
|
Whiteboard: [patch in hand, waiting for r=/sr=/a=] fixed1.3 → fixed1.3
Updated•17 years ago
|
Product: Core → Core Graveyard
Updated•15 years ago
|
Crash Signature: [@ nsRenderingContextXlib::GetTextDimensions]
You need to log in
before you can comment on or make changes to this bug.
Description
•