Bug 194644 ISO10646-1 fonts not recognised + Talkback crashes in Xprint module [nsRenderingContextXlib::GetTextDimensions()] patch by Roland.Mainz@informatik.med.uni-giessen.de r=smontagu sr=roc+moz